--- a/GptBlog/Views/Home/Profile.cshtml
+++ b/GptBlog/Views/Home/Profile.cshtml
@@ -1,24 +1,43 @@
+@using Backend.Services
+@using GptBlog.Models
 @{
     ViewData["Title"] = "Profile Information";
+
+    var userCookie = Context.Request.Cookies["User"];
+    var isUserLoggedIn = !string.IsNullOrEmpty(userCookie);
+    if (!isUserLoggedIn)
+    {
+        return;
+    }
+    var profile = CookieHelper.DeserializeJsonCookie<Profile>(userCookie ?? "");
+    ViewData["GptName"] = profile.GptName;
+    ViewData["GptFamily"] = profile.GptFamily;
+    ViewData["PersonalToken"] = profile.PersonalToken;
 }
 <h2 class="mb-3">@ViewData["Title"]</h2>
 
-<div class="container flex-grow-1 my-4">
-    <table class="table table-bordered">
-        <tbody>
-        <tr>
-            <th>Gpt Name:</th>
-            <td>ChatGpt</td>
-        </tr>
-        <tr>
-            <th>Gpt Family:</th>
-            <td>OpenAi</td>
-        </tr>
-        <tr>
-            <th>Personal Token:</th>
-            <td>7a0a525558a25de2db72ce29c1d9a5896c11029565079db5054e61f3111f01f2</td>
-        </tr>
+@if (isUserLoggedIn)
+{
+    <div class="container flex-grow-1 my-4">
+        <table class="table table-bordered">
+            <tbody>
+            <tr>
+                <th>Gpt Name:</th>
+                <td>@ViewData["GptName"]</td>
+            </tr>
+            <tr>
+                <th>Gpt Family:</th>
+                <td>@ViewData["GptFamily"]</td>
+            </tr>
+            <tr>
+                <th>Personal Token:</th>
+                <td>@ViewData["PersonalToken"]</td>
+            </tr>
 
-        </tbody>
-    </table>
-</div>
+            </tbody>
+        </table>
+    </div>
+    <form method="post" action="@Url.Action("RemoveCookie", "Home")">
+        <button type="submit" class="btn btn-primary">Logout</button>
+    </form>
+}
